--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = rgb_block
 depends = default
-description = "Adds an animated RGB Block in your Minetest"
+description = Adds a simple animated RGB Block
