Remove hard dependency on `default`

--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = rgb_block
-depends = default
-description = Adds a simple animated RGB Block
+title = Simple RGB Block
+description = Adds a simple animated RGB block.
