--- a/mod.conf
+++ b/mod.conf
@@ -2,3 +2,4 @@ name = rgb_block
 title = Simple RGB Block
 description = Adds a simple animated RGB block.
 min_minetest_version = 0.4.10
+optional_depends = default
